# hadronization_ccqc

./: .gitignore  README.md  pyproject.toml
configs/: chem_demo.toml  default.toml  demo_small.toml  prod_H0.toml  prod_corner.toml  prod_test.toml  render_event.toml  scan_H0.toml  scan_H0_more.toml  scan_ccseed.toml  scan_ccseed_late.toml  scan_corner.toml  scan_finite.toml  scan_heatmap.toml  scan_heatmap_fill.toml  scan_melting.toml  scan_pgamma.toml  scan_smallsys.toml  scan_smallsys_hi.toml  scan_syst.toml  scan_tau.toml  scan_tau3000.toml  static_lebed.toml
paper/: main.tex  refs.bib  refs_to_verify.md
paper/sections/: app_a_color.tex  app_b_validation.tex  app_c_charge_quantization.tex  app_d_spectral_projectors.tex  app_e_limits.tex  app_f_emt.tex  app_g_pair_spectra.tex  app_h_flowed_projectors.tex  s01_intro.tex  s02_classical_model.tex  s03_methods.tex  s04_classical_results.tex  s05_quantum_setup.tex  s06_initial_states.tex  s07_hierarchy.tex  s08_resonances.tex  s09_protocols.tex  s10_confrontation.tex  s11_conclusions.tex
scripts/: calibrate_lifetime.py  plot_dqfirst.py  plot_event.py  plot_potentials.py  plot_scans.py  plot_species.py  plot_static.py  render_snapshots.py  static_correlated.py  static_shift_hi.py
src/diquark_md/: __init__.py  cli.py  clusters.py  color.py  integrator.py  io.py  neighbors.py  observables.py  potentials.py  reactions.py  scan.py  sim.py  units.py
tests/: test_clusters.py  test_color.py  test_dynamics.py  test_gr.py  test_lebed_static.py  test_neighbors.py  test_reactions.py  test_seeding.py
