[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diquark_md"
version = "0.1.0"
description = "Dynamical classical simulation of hadron species formation in an expanding quark-antiquark gas (extension of Lebed, PRD 94, 034039)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
    "h5py>=3.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
diquark-md = "diquark_md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
